# sbm_ls

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: common_definitions.h  controller.h  error_estimate.h  general_utils.h  interface.h  poisson_problem.h  problem.h
python/: finite_difference.py  gnuplot.py  map.py  pore.py  python_plot.py  shifted_integration.py  surface_integral.py  torus.py
source/: client.cpp  driver.cc
